# proofloop

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: cli-reference.md  getting-started.md  guide.md  how-it-works.md  installation.md  mcp-servers.md  quickstart.md  reference.md  usage.md
src/: __init__.py
src/application/: __init__.py  orchestrator.py  prompts.py  research_orchestrator.py  workspace_manager.py
src/application/dto/: __init__.py  final_result.py  task_input.py  task_output.py
src/application/services/: __init__.py  command_tracker.py  stagnation_detector.py  supervisor.py  tool_gating.py
src/application/use_cases/: __init__.py  approve_conditions.py  approve_plan.py  build_verification_inventory.py  create_plan.py  define_conditions.py  execute_delivery.py  finalize_task.py  hydrate_external_context.py  intake_task.py  load_task.py  run_quality_loop.py  select_mcp_servers.py  select_strategy.py
src/application/use_cases/research/: __init__.py  build_research_inventory.py  capture_repo_context.py  execute_deepening.py  execute_discovery.py  finalize_research.py  generate_llm_handoff.py  generate_report_pack.py  run_research_baseline.py  select_sources.py  validate_citations.py  verify_research_conditions.py
src/cli/: main.py  runner.py  theme.py  utils.py
src/cli/commands/: derive_code.py  list_tasks.py  resume.py  run.py  status.py
src/cli/formatters/: __init__.py  progress_formatter.py  result_formatter.py  stage_formatter.py  stage_hints.py  tool_formatter.py
src/cli/mcp/: __init__.py  ui.py
src/domain/entities/: __init__.py  budget.py  condition.py  excerpt.py  finding.py  iteration.py  knowledge_base.py  llm_handoff.py  plan.py  report_pack.py  research_inventory.py  research_result.py  source.py  task.py  verification_inventory.py
src/domain/ports/: __init__.py  agent_port.py  check_runner_port.py  diff_port.py  git_port.py  task_repo_port.py  verification_port.py
src/domain/services/: __init__.py  citation_validator.py  coverage_calculator.py  multi_repo_manager.py  secret_redactor.py  source_deduplicator.py  source_key_generator.py
src/domain/value_objects/: __init__.py  agent_provider.py  artifact_kind.py  check_types.py  clarification.py  condition_enums.py  condition_params.py  context_ref.py  evidence_types.py  mcp_types.py  report_pack_template.py  research_preset.py  research_type.py  source_locator.py  stagnation_action.py  supervision_enums.py  task_status.py  task_type.py
src/infrastructure/agent/: __init__.py  agent_factory.py  claude_agent_adapter.py  codex_agent_adapter.py  opencode_agent_adapter.py
src/infrastructure/checks/: __init__.py  command_check_runner.py
src/infrastructure/git/: __init__.py  git_adapter.py  git_diff_adapter.py  repo_root.py
src/infrastructure/mcp/: __init__.py  configurator.py  installer.py  registry.py
src/infrastructure/persistence/: __init__.py  _paths.py  artifact_store.py  async_file_lock.py  atomic_io.py  evidence_store.py  json_task_repo.py
src/infrastructure/research/: __init__.py  knowledge_base_store.py  llm_handoff_store.py  repo_context_store.py  report_pack_store.py  safe_bash_executor.py  verification_evidence_store.py
src/infrastructure/utils/: __init__.py  agent_json.py  formatting.py  json_extractor.py
src/infrastructure/verification/: __init__.py  project_analyzer.py
tests/: conftest.py
tests/infrastructure/agent/: test_claude_agent_adapter.py  test_codex_agent_adapter.py  test_opencode_agent_adapter.py
tests/infrastructure/checks/: test_command_check_runner.py
tests/infrastructure/git/: test_git_diff_adapter.py  test_repo_root.py
tests/infrastructure/utils/: test_formatting.py
tests/infrastructure/verification/: test_project_analyzer.py
tests/integration/: test_evidence_store.py  test_json_task_repo.py  test_orchestrator.py  test_research_pipeline.py
tests/unit/application/: test_execute_delivery.py  test_execute_delivery_full.py  test_hydrate_external_context.py  test_intake_task.py  test_load_task.py  test_orchestrator_full.py  test_orchestrator_research.py  test_orchestrator_retry.py  test_research_task_input.py  test_research_tool_gating.py  test_select_mcp_servers.py  test_stagnation_detector.py  test_supervisor.py  test_supervisor_full.py  test_tool_gating.py  test_use_cases.py  test_use_cases_full.py
tests/unit/application/research/: test_build_research_inventory.py  test_capture_repo_context.py  test_execute_deepening.py  test_execute_discovery.py  test_finalize_research.py  test_generate_llm_handoff.py  test_generate_report_pack.py  test_run_research_baseline.py  test_select_sources.py  test_validate_citations.py  test_verify_research_conditions.py
tests/unit/application/services/: test_stagnation_detector.py
tests/unit/cli/: test_commands.py  test_formatters.py  test_formatters_full.py  test_main.py  test_mcp_ui.py  test_runner.py
tests/unit/cli/commands/: test_derive_code.py
tests/unit/domain/: test_condition.py  test_diff_port.py  test_entities.py  test_mcp_types.py  test_multi_repo_manager.py  test_task.py  test_task_status.py
tests/unit/domain/services/: test_citation_validator.py  test_coverage_calculator.py  test_secret_redactor.py  test_source_deduplicator.py  test_source_key_generator.py
tests/unit/infrastructure/: test_artifact_store.py  test_mcp_configurator.py  test_mcp_installer.py  test_mcp_registry.py
tests/unit/infrastructure/research/: test_knowledge_base_store.py  test_llm_handoff_store.py  test_repo_context_store.py  test_report_pack_store.py  test_safe_bash_executor.py
