[project]
name = "proofloop"
version = "1.1.0"
description = "AI agents that run until done - define conditions, go to sleep, wake up to results"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ai", "agent", "coding", "automation", "claude", "llm", "python", "cli", "developer-tools", "code-generation", "autonomous", "verification", "mcp", "codex", "opencode", "workflow-automation", "ai-coding", "llm-agent", "testing-automation", "devops"]
authors = [
    {name = "Exiw Ai", email = "exiwai@proton.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "claude-code-sdk>=0.0.1",
    "filelock>=3.16.0",
    "aiofiles>=24.1.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "opencode-ai>=0.1.0a36",
    "python-codex-sdk>=0.1.2",
]

[project.scripts]
proofloop = "src.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "aiosqlite>=0.20.0",
    "python-semantic-release>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/exiw-ai/proofloop"
Repository = "https://github.com/exiw-ai/proofloop"
Issues = "https://github.com/exiw-ai/proofloop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/cli/**/*.py" = ["B008"]  # typer.Option/Argument in defaults is expected
"tests/**/*.py" = ["ARG"]  # pytest fixtures use unused-looking arguments

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "src/infrastructure/research/",
    "src/application/use_cases/research/",
    "src/domain/entities/research_inventory\\.py",
    "src/domain/entities/knowledge_base\\.py",
    "src/domain/entities/report_pack\\.py",
    "src/domain/entities/llm_handoff\\.py",
    "src/domain/entities/source\\.py",
    "src/domain/entities/finding\\.py",
    "src/domain/entities/excerpt\\.py",
    "src/domain/entities/research_result\\.py",
    "src/domain/services/citation_validator\\.py",
    "src/domain/services/coverage_calculator\\.py",
    "src/domain/services/secret_redactor\\.py",
    "src/domain/services/source_deduplicator\\.py",
    "src/domain/services/source_key_generator\\.py",
    "src/domain/value_objects/artifact_kind\\.py",
    "src/domain/value_objects/context_ref\\.py",
    "src/domain/value_objects/report_pack_template\\.py",
    "src/domain/value_objects/research_preset\\.py",
    "src/domain/value_objects/research_type\\.py",
    "src/domain/value_objects/stagnation_action\\.py",
    "src/domain/value_objects/task_type\\.py",
    "src/application/use_cases/hydrate_external_context\\.py",
    "src/cli/commands/derive_code\\.py",
]

[[tool.mypy.overrides]]
module = "loguru"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "filelock"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_code_sdk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_code_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencode_ai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencode_ai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "codex_sdk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "codex_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
